--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,62 @@
-h1 {
-    padding: 60px;
-    text-align: center;
-    background:white;
-    color: black;
-  }
+/* CSS Style Sheet for Horiseon website refactorization */
 
-.project1{
-    flex: 70%;
-    background: lightblue;
-    color:black;
-    padding: 20px;
-    margin: 0px;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  border: 0;
 }
 
-aside {
-    flex: 30%;
-    background-color: #043a81;
-    padding: 20px;
-    flex-wrap: wrap;
-  }
+/* Classes format the header of the website */
+
+.header {
+  padding: 2%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: rgba(63, 7, 63, 0.918);
+  color:white;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.header div h1{
+  font-size: 48px;
+  display:inline-block;
+  margin-top: 75px;
+  flex:auto;
+}
+.header div ul li{
+  font-size:15px;
+  margin-top: 75px;
+  margin-right:5px;
+  margin-left:5px;
+  display:inline-block;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  flex:auto;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.header div img{
+  display:inline-block;
+  border-radius: 15px;
+  max-height: 200px;
+  flex:auto;
+  /* align-self: end; */
+}
+
+
+/* Following classes format the entire body of the website */
+
+body {
+  background-color: white;
+}
+
+.project{
+  margin:5%;
+  font-size:30px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
