--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,49 @@
-/*  */
+/* Professional Porfolio Styling */
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  border: 0;
+/* .image_format {
+  width: 20%;
+  height: auto;
+} */
+
+.image_format{
+  border-radius: 1px;
+  height:auto;
+  max-width:100px;
 }
 
-/* Classes format the header of the website */
-
-.header {
-  padding: 2%;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  background-color: rgba(63, 7, 63, 0.918);
-  color:white;
-  display:flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+.button_format{
+  margin-top: 7%;
 }
 
-.header div h1{
-  font-size: 48px;
-  display:inline-block;
-  margin-top: 75px;
-  flex:auto;
-}
-.header div ul li{
-  font-size:15px;
-  margin-top: 75px;
-  margin-right:5px;
-  margin-left:5px;
-  display:inline-block;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  flex:auto;
+.about_image_format{
+  margin-top:5%;
+  height:auto;
+  margin-left: auto;
+  margin-right: auto;
+  max-width:80%;
 }
 
-a {
-  color: white;
-  text-decoration: none;
+.about_image_format2{
+  margin-top:5%;
+  height:auto;
+  margin-left: auto;
+  margin-right: auto;
+  max-width:90%;
 }
-
-.header div img{
-  display:inline-block;
-  border-radius: 15px;
-  max-height: 200px;
-  flex:auto;
-  /* align-self: end; */
+.about_image_format3{
+  margin-top:5%;
+  height:auto;
+  margin-left: auto;
+  margin-right: auto;
+  max-width:99%;
 }
-
-
-/* Following classes format the entire body of the website */
-
-body {
-  background-color: white;
+.button_project_format{
+  margin-top: 1%;
 }
-
-.project{
-  margin:5%;
-  font-size:30px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+/* Display for the phone*/
+@media screen and (max-width: 850px){
+  .image_format{
+    display:none;
+  }
+  
 }
-
